# concrete-ml-extensions

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  test.py
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yaml  release.yml
TestConcretMLX/Helpers/: CopyableText.swift  Network.swift  Storage.swift
TestConcretMLX/TestConcretMLX/: ContentView.swift  TestConcretMLXApp.swift
TestConcretMLX/TestConcretMLX.xcodeproj/: project.pbxproj
ci/: slab.toml
rust/: Cargo.toml
rust/generated_bindings_python/: concrete_ml_extensions.py
rust/generated_bindings_swift/: concrete_ml_extensions.swift  concrete_ml_extensionsFFI.h  concrete_ml_extensionsFFI.modulemap
rust/src/: compression.rs  computations.rs  encryption.rs  fhext_classes.rs  lib.rs  lib2.rs  lib_python.rs  lib_swift.rs  lib_switcher.rs  lib_wasm.rs  main.rs  ml.rs  radix_utils.rs
scripts/: CMakeLists.txt  check_cargo_min_ver.sh  generate_noise_profile.py  print_cuda_infos.sh  version_utils.py
src/: compression.rs  computations.rs  encryption.rs  lib.rs  main.rs  ml.rs
src/concrete_ml_extensions/: __init__.py  utils_simulation.py
src/concrete_ml_extensions/noise_profiles/: MANIFEST.json  profile_inner2048_chashec7d25650e17ceb7.json  profile_inner4096_chashec7d25650e17ceb7.json  profile_inner8192_chashec7d25650e17ceb7.json
tests/: conftest.py  test.py  test_compression.py  test_correctness.py  test_crypto_params_io.py  test_matmul.py  test_radix.py  test_random_seed.py  test_simulation.py
tests/test_wasm/: index.html  server.py  test.js
tests/test_wasm/backend/: Cargo.toml
tests/test_wasm/backend/src/: main.rs
tests/test_wasm/fhe_server_rust/: Cargo.toml
tests/test_wasm/fhe_server_rust/src/: main.rs
tests/test_wasm/frontend/: e2e.spec.js  index.html  main.js  package-lock.json  package.json  playwright.config.js
