[package]
name = "deai-dot-products"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"

[profile.release_lto_off]
inherits = "release"
lto = "off"

# Compiles much faster for tests and allows reasonable performance for iterating
[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false

[dependencies]
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"

[target.'cfg(target_arch = "x86_64")'.dependencies.tfhe]
version = "0.7.2"
features = ["x86_64-unix"]

[target.'cfg(target_arch = "aarch64")'.dependencies.tfhe]
version = "0.7.2"
features = ["aarch64-unix"]
