[package]
name = "concrete-ml-extensions"
version = "0.1.1"
edition = "2021"
description = "Private matrix multiplication library using fully homomorphic encryption"
license-file = "LICENSE"
homepage = "https://zama.ai"

[lib]
name="concrete_ml_extensions"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"

[profile.release_lto_off]
inherits = "release"
lto = "off"

# Compiles much faster for tests and allows reasonable performance for iterating
[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false

[dependencies]
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
numpy = "0.21"
serde_json = "1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies.tfhe]
version = "0.7.2"
features = ["x86_64-unix"]

[target.'cfg(target_arch = "aarch64")'.dependencies.tfhe]
version = "0.7.2"
features = ["aarch64-unix"]
