[tool.poetry]
name = "concrete-ml-extensions"
version = "0.1.0"
description = "Concrete ML extensions is a set of tools used by the Concrete ML library implemented using the TFHE-rs library."
license-file = "LICENSE"
authors = [
    "Zama <hello@zama.ai>",
]
# To fill properly
homepage = "https://github.com/zama-ai/deai-dot-products"
repository = "https://github.com/zama-ai/deai-dot-products"
documentation = "https://github.com/zama-ai/deai-dot-products"
keywords = ["FHE", "homomorphic encryption", "privacy", "security"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
numpy = "1.23.5"
pytest-randomly = "^3.15.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^24.3.0"
pylint = "^2.13.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.poetry.group.build.dependencies]
maturin = ">=1.0,<2.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestRemovedIn9Warning"
]

