[project]
name = "concrete-ml-extensions"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust"
]
requires-python = ">=3.7"
dynamic = ["version"]

[tool.poetry]
name = "concrete-ml-extensions"
version = "0.2.0"
description = "Concrete ML extensions is a set of tools used by the Concrete ML library implemented using the TFHE-rs library."
license = "BSD-3-Clause-Clear"
authors = [
    "Zama <hello@zama.ai>",
]
# To fill properly
homepage = "https://github.com/zama-ai/deai-dot-products"
repository = "https://github.com/zama-ai/deai-dot-products"
documentation = "https://github.com/zama-ai/deai-dot-products"
keywords = ["FHE", "homomorphic encryption", "privacy", "security"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/concrete_ml_extensions/__init__.py:__version__"
upload_to_pypi = "False"
changelog_sections = "breaking, feature, fix, documentation, performance"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
numpy = [
        {version = "1.23.5", python = "<3.9" }, 
        {version = "1.26.4", python = ">=3.9.0"}        
        ]
pytest-randomly = "^3.15.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^24.3.0"
pylint = "^2.13.0"
semver = "^3.0.2"
tqdm = "^4.66.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.poetry.group.build.dependencies]
maturin = ">=1.0,<2.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestRemovedIn9Warning"
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-packages = ["concrete_ml_extensions"]