[package]
name = "concrete-ml-extensions"
version = "0.1.5"
edition = "2021"
description = "Private matrix multiplication library using fully homomorphic encryption"
license = "BSD-3-Clause-Clear"
homepage = "https://zama.ai"

[lib]
name="concrete_ml_extensions"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"

[profile.release_lto_off]
inherits = "release"
lto = "off"

# Compiles much faster for tests and allows reasonable performance for iterating
[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false

[dependencies]
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
pyo3 = { version = "0.21.0", features = ["extension-module", "generate-import-lib"] }
numpy = "0.21"
serde_json = "1.0"
#tfhe = "0.11.1"
#tfhe = { path = "/home/stoiana/Private/Work/tfhe-rs/tfhe", features = [ "gpu", "integer" ] }
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "cec3d0e76b78272b6a799340329f1ec985581e13", features = ["integer", "gpu"] }

#[target.'cfg(all(target_arch = "x86_64", not(target_vendor="apple")) )'.dependencies]
#tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", branch = "as/add_circulant_poly_product", features = ["integer", "gpu"] }

#[target.'cfg(any(target_arch = "aarch64", target_vendor="apple"))'.dependencies]
#tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", branch = "as/add_circulant_poly_product", features = ["integer"] }

[features]
default = ["cuda"]
cuda = []