[package]
name = "concrete-ml-extensions"
version = "0.1.9"
edition = "2021"
description = "Private matrix multiplication library using fully homomorphic encryption"
license = "BSD-3-Clause-Clear"
homepage = "https://zama.ai"

[lib]
name="concrete_ml_extensions"
path = "src/lib_switcher.rs"
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = "fat"
opt-level = 'z' # optimize size
codegen-units = 1

[profile.release_lto_off]
inherits = "release"
lto = "off"

# Compiles much faster for tests and allows reasonable performance for iterating
[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false

[dependencies]
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
pyo3 = { version = "0.21.0", features = ["extension-module", "generate-import-lib"], optional = true}
uniffi = { version = "0.28", optional = true }
numpy = { version = "0.21", optional = true }
serde_json = "1.0"
#tfhe = "0.11.1"
#tfhe = { path = "/home/stoiana/Private/Work/tfhe-rs/tfhe", features = [ "gpu", "integer" ] }
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "47a6da60eb43cf8e8f7beb193dc12feee73d7f63", features = ["integer"] }

# WASM specific dependencies
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
js-sys = { version = "0.3", optional = true } # For JavaScript types
serde-wasm-bindgen = { version = "0.6", optional = true } # For JsValue <-> Serde
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true } # For WASM-compatible randomness.

[build-dependencies]
uniffi = { version = "0.28", features = [ "build" ], optional = true }

[features]
default = ["cuda", "python_bindings"]
cuda = ["tfhe/gpu", "tfhe/gpu-experimental-multi-arch"]
python_bindings = ["pyo3", "numpy"]
swift_bindings = ["uniffi", "uniffi/cli"]
wasm_bindings = ["console_error_panic_hook", "wasm-bindgen", "js-sys", "serde-wasm-bindgen", "getrandom", "tfhe/__wasm_api"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
