[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum         = "0.7"
tokio        = { version = "1", features = ["full"] }
tower-http   = { version = "0.5", features = ["cors", "fs", "limit"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1.0"
base64       = "0.22"
bincode      = "1.3"
tfhe         = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "7b127d4b716c6e75fac85a8e2c315d632202a7ec", features = ["integer"] }
hyper        = { version = "1", features = ["full"] }
hyper-util   = { version = "0.1", features = ["full"] }
tower        = { version = "0.5", features = ["full"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 