[package]
name = "fhe_server_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rouille = "3.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
bincode = "1.3.3"
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "1ec21a5e0b7c12165aa7e556c01e730c3117765a", features = ["integer"] }

[profile.release]
opt-level = 'z' 